# LingoLock

./: .gitignore  LICENSE  README.md  app.json  eas.json  jest.config.js  package-lock.json  package.json  push-audio-branch.sh  tsconfig.json
.planning/: PROJECT.md  ROADMAP.md  (+2 more)
spanish-content-pipeline/: .env.example  .gitignore  PLANNING.md  README.md  pyproject.toml
spanish-content-pipeline/benchmarks/: bench_audit.py  bench_chapter_audit.py  bench_config.yaml  bench_config_cheap.yaml  bench_config_premium.yaml  bench_config_story_audit.yaml  bench_config_test.yaml  bench_config_thinking.yaml  bench_gap_filler.py  bench_grammar.py  bench_simplification.py  bench_story_gen.py  bench_translation.py  bench_translation_multilingual.py  bench_word_extraction.py  common.py  plot_results.py  run_benchmarks.py
spanish-content-pipeline/configs/: himym_s01_es.yaml  spanish_buenos_aires.yaml  travel_budapest.yaml  travel_hu_de_quick.yaml
spanish-content-pipeline/pipeline/: asset_compressor.py  audio_generator.py  cefr_simplifier.py  chapter_auditor.py  config.py  coverage_checker.py  fal_client.py  frequency_lemmatizer.py  gap_filler.py  gemini_image_client.py  grammar_auditor.py  grammar_gap_filler.py  image_auditor.py  image_generator.py  image_prompter.py  lemmatizer.py  llm.py  models.py  modelscope_client.py  scene_story_generator.py  sentence_inserter.py  sentence_translator.py  story_auditor.py  story_generator.py  subtitle_processor.py  subtitle_word_extractor.py  together_client.py  travel_pipeline.py  vocabulary_builder.py  vocabulary_planner.py  word_extractor.py
(+499 files in other folders)
